Fix CSS alignment and page issues in profile page

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -24,6 +24,13 @@ a {
   align-items: center;
   justify-content: center;
 }
+.container2 {
+  min-height: 40vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 img {
   height: 100%;
   width: 100%;
